--- a/StockMarketApp/MainPage.xaml
+++ b/StockMarketApp/MainPage.xaml
@@ -6,10 +6,14 @@
         <Entry x:Name="StockSymbolEntry" Placeholder="Enter Stock Symbol" />
         <Button Text="Get Stock Data" Clicked="OnGetStockDataClicked" />
         <ActivityIndicator x:Name="LoadingIndicator" IsRunning="False" IsVisible="False" />
-        <Label Text="Stock Name:" />
-        <Label x:Name="StockNameLabel" />
-        <Label Text="Stock Price:" />
-        <Label x:Name="StockPriceLabel" />
+        <Frame Margin="0,20,0,0" HeightRequest="150" HorizontalOptions="Start" WidthRequest="150">
+            <VerticalStackLayout>
+                <Label Text="Stock Name:" />
+                <Label x:Name="StockNameLabel" />
+                <Label Text="Stock Price:" />
+                <Label x:Name="StockPriceLabel" />
+            </VerticalStackLayout>          
+        </Frame>       
     </StackLayout>
 </ContentPage>
 
