--- a/StockMarketApp/MainPage.xaml
+++ b/StockMarketApp/MainPage.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="StockMarketApp.MainPage">
     <StackLayout Padding="20">
-        <Entry x:Name="StockSymbolEntry" Placeholder="Enter Stock Symbol" />
-        <Button Text="Get Stock Data" Clicked="OnGetStockDataClicked" />
+        <Entry BackgroundColor="LightGray" x:Name="StockSymbolEntry" Placeholder="Enter Stock Symbol" />
+        <Button Margin="0,10,0,0" Text="Get Stock Data" Clicked="OnGetStockDataClicked" />
         <ActivityIndicator x:Name="LoadingIndicator" IsRunning="False" IsVisible="False" />
         <Frame Margin="0,20,0,0" HeightRequest="150" HorizontalOptions="Start" WidthRequest="150">
             <VerticalStackLayout>
